[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pictures/WSAD.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Pictures/Mouse_icon_vector.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MTBR.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="1BR" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 584, 369 )
scale = Vector2( 6.3556, 2.51975 )
texture = ExtResource( 1 )

[node name="Wsad" type="Sprite" parent="."]
position = Vector2( 679, 233 )
scale = Vector2( 0.850694, 0.927808 )
texture = ExtResource( 2 )

[node name="MouseIconVector" type="Sprite" parent="Wsad"]
position = Vector2( -396.147, -6.46687 )
scale = Vector2( 0.438302, 0.400854 )
texture = ExtResource( 4 )

[node name="TITLE" type="RichTextLabel" parent="."]
margin_left = 144.0
margin_top = 31.0
margin_right = 951.0
margin_bottom = 150.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
tab_size = 24
text = "CONTROLES MOUSE E TECLADO"

[node name="Node" type="Node" parent="."]

[node name="Anterior" type="Button" parent="."]
margin_left = 420.0
margin_top = 530.0
margin_right = 492.0
margin_bottom = 550.0
text = "Anterior"

[node name="Proximo" type="Button" parent="."]
margin_left = 502.0
margin_top = 530.0
margin_right = 574.0
margin_bottom = 550.0
text = "Proximo"

[node name="Menu" type="Button" parent="."]
margin_left = 1.0
margin_top = 579.0
margin_right = 49.0
margin_bottom = 599.0
text = "Menu"

[node name="Label" type="Label" parent="."]
margin_left = 290.0
margin_top = 365.0
margin_right = 752.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 3 )
text = "Caso seja selecionado o modo mouse e
teclado, o jogador pode se mover
usando as teclas WSAD, mirando usando
o mouse e atirando com o bot√£o esquerdo
do mouse."
align = 1
valign = 1

[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
[connection signal="pressed" from="Proximo" to="." method="_on_Proximo_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
